# nat-calc

./: Cargo.toml  README.md  index.html
src/: app.rs  ast.rs  config.rs  derive.rs  engine.rs  error.rs  expand.rs  graph.rs  lambda.rs  lexer.rs  lib.rs  logic.rs  main.rs  numeric.rs  parser.rs  simplify.rs
tests/: engine.rs
